--- a/env/filter-dev.properties
+++ b/env/filter-dev.properties
@@ -1,11 +1,6 @@
 loggingLevel = INFO
 productionMode=false
-loggingRoot = /usr/local/output/qksms
+loggingRoot = /usr/local/output/hzcms
 sms.datasource.url=jdbc:mysql://192.168.20.135:3306/sms?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf8
 sms.datasource.username=root
 sms.datasource.password=root123
-jms.send.sms.host=failover:(tcp://192.168.20.135:61616,tcp://192.168.20.135:61617,tcp://192.168.20.135:61618)?initialReconnectDelay=1000
-jms.send.sms.queueName=sms_qk_queue
-
-##rabbit server
-rabbit.server.address=192.168.20.152:5672,192.168.20.153:5672
