--- a/data/dal/pom.xml
+++ b/data/dal/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.qk.qingka</groupId>
+		<groupId>com.hzsuwang.hzcms</groupId>
 		<artifactId>hzcms.all</artifactId>
 		<version>1.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
-	<groupId>com.qk.qingka</groupId>
+	<groupId>com.hzsuwang.hzcms</groupId>
 	<artifactId>hzcms.data.dal</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
@@ -25,7 +25,7 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>com.qk.qingka</groupId>
+			<groupId>com.hzsuwang.hzcms</groupId>
 			<artifactId>hzcms.data.domain</artifactId>
 			<version>${project.version}</version>
 			<type>jar</type>
