--- a/env/filter-production.properties
+++ b/env/filter-production.properties
@@ -1,6 +1,6 @@
 loggingLevel = INFO
 productionMode=false
 loggingRoot = /usr/local/output/hzcms
-sms.datasource.url=jdbc:mysql://rdsi667de3o2bu2af948.mysql.rds.aliyuncs.com:3306/sms?autoReconnect=true&amp;useunicode=true&amp;characterEncoding=utf8
+sms.datasource.url=jdbc:mysql://rdsi667de3o2bu2af948.mysql.rds.aliyuncs.com:3306/hzcms?autoReconnect=true&amp;useunicode=true&amp;characterEncoding=utf8
 sms.datasource.username=smsmain
 sms.datasource.password=HZqingka20150608
