--- a/env/filter-dev.properties
+++ b/env/filter-dev.properties
@@ -1,6 +1,6 @@
 loggingLevel = INFO
 productionMode=false
 loggingRoot = /usr/local/output/hzcms
-sms.datasource.url=jdbc:mysql://192.168.20.135:3306/sms?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf8
+sms.datasource.url=jdbc:mysql://192.168.20.136:3306/hzcms?autoReconnect=true&amp;useUnicode=true&amp;characterEncoding=utf8
 sms.datasource.username=root
 sms.datasource.password=root123
