--- a/pom.xml
+++ b/pom.xml
@@ -281,20 +281,10 @@
                 <artifactId>quartz</artifactId>
                 <version>1.6.1</version>
             </dependency>
-			<dependency>
-			  <groupId>org.apache.openejb.tools</groupId>
-			  <artifactId>release-tools</artifactId>
-			  <version>1.0-SNAPSHOT</version>
-			</dependency>
             <dependency>
-                <groupId>org.apache.activemq</groupId>
-                <artifactId>activemq-client</artifactId>
-                <version>5.10.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.activemq</groupId>
-                <artifactId>activemq-broker</artifactId>
-                <version>5.10.0</version>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>2.0.6</version>
             </dependency>
 		</dependencies>
     </dependencyManagement>
